# time_tracking

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  barchart.rs  calc_time.rs  export_json.rs  lib.rs  list.rs  main.rs  read_json.rs  tabs.rs  transform_digit_to_ascii.rs  tui.rs  ui.rs
src/tabs/: barchart_tab.rs  edit_history.rs  focus_time.rs  meeting_notes.rs
