[package]
name = "time_tracking_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.2"
serde = { version = "*", features = ["derive"] }
serde-jsonlines = "0.5.0"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tui-big-text = "0.4.4"
